(css/structure): fix the weird nav overflow

--- a/structure.css
+++ b/structure.css
@@ -34,7 +34,6 @@ header > nav h2 {
   margin: 0px;
 }
 header > nav > ul {
-  height: 2em;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -63,6 +62,10 @@ header > nav > ul > li > label {
 header > nav > ul > li > input:checked + label {
   /* font-size: 1.75em; */
   text-shadow: 0px 0px 15px var(--accent-color);
+}
+header > nav > ul {
+    display: flex;
+    flex-wrap: wrap;
 }
 main {
     max-width: clamp(50%, 400px, 90%)
